--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -49,7 +49,7 @@
                 </div>
                 <ul class="mt-24 sm-mt-0">
                     <li>
-                        <a tel:+0800-000-000 type="tel" class="fz-36 white d-inline-flex ai-c  sm-fz-16"><span class="material-icons-outlined fz-36 mr-16 sm-fz-20">call</span>0800-000-000</a>
+                        <a herf="tel:+0800-000-000" type="tel" class="fz-36 white d-inline-flex ai-c  sm-fz-16"><span class="material-icons-outlined fz-36 mr-16 sm-fz-20">call</span>0800-000-000</a>
                     </li>
                     <li class="mt-8">
                         <a href="mailto:glasses@business.co" class="fz-36 white d-inline-flex ai-c mr-8 sm-fz-16"><span class="material-icons-outlined fz-36 mr-16 sm-fz-20">email</span>glasses@business.com</a>
@@ -59,8 +59,8 @@
             <div class="d-flex jc-sb ai-c border-top sm-fd-c sm-ai-s">
                 <p class="roboto white">Copyright © 2020 Glasses.All rights reserved.</p>
                 <ul class="d-flex sm-fd-c gap-48 sm-mt-8 sm-gap-8">
-                    <li><a href="" class="fz-14 white">隱私權政策</a></li>
-                    <li><a href="" class="fz-14 white">服務條款</a></li>
+                    <li><a href="#" class="fz-14 white">隱私權政策</a></li>
+                    <li><a href="#" class="fz-14 white">服務條款</a></li>
                 </ul>
             </div>
         </div>
